@startuml
title D04 - Domain Class Diagram
hide methods
skinparam classAttributeIconSize 0

class User {
  id
  name
  email
  role
  companyId
}

class Company {
  id
  name
  taxCode
  status
  rejectReason
  rating
}

class Category {
  id
  name
  imageUrl
}

class SupplyListing {
  id
  title
  quantity
  unit
  pricePerUnit
  location
  imageUrl
  status
}

class DemandListing {
  id
  title
  quantity
  unit
  targetPrice
  deadline
  status
}

class Offer {
  id
  listingId
  buyerId
  sellerId
  quantity
  proposedPrice
  status
}

class Transaction {
  id
  agreedPrice
  paymentStatus
  status
}

class TransactionEvent {
  id
  fromStatus
  toStatus
  note
  createdAt
}

class EscrowTransaction {
  id
  amount
  feeAmount
  sellerAmount
  status
  holdUntil
}

class PlatformFee {
  id
  transactionAmount
  feeRate
  feeAmount
  status
}

class PlatformWallet {
  id
  balance
  totalIncome
}

class SellerWallet {
  id
  sellerId
  balance
  totalEarned
  totalWithdrawn
}

class SellerWalletTransaction {
  id
  type
  amount
  balanceAfter
}

class WithdrawalRequest {
  id
  amount
  bankName
  status
  adminNote
}

class Review {
  id
  transactionId
  reviewerId
  revieweeId
  rating
  comment
}

class Notification {
  id
  userId
  title
  type
  read
}

User "1" -- "0..1" Company : sở hữu logic
Company "1" -- "0..*" SupplyListing : đăng bán
Company "1" -- "0..*" DemandListing : đăng mua
Category "1" -- "0..*" SupplyListing : phân loại
Category "1" -- "0..*" DemandListing : phân loại
SupplyListing "1" -- "0..*" Offer : nhận đề nghị
User "1" -- "0..*" Offer : Buyer/Seller
Offer "1" -- "0..1" Transaction : tạo ra
Transaction "1" *-- "1..*" TransactionEvent : timeline
Transaction "1" -- "0..*" EscrowTransaction : giữ tiền mô phỏng
Transaction "1" -- "0..1" PlatformFee : phát sinh phí
PlatformWallet "1" -- "0..*" PlatformFee : ghi nhận
User "1" -- "0..1" SellerWallet : sở hữu logic
SellerWallet "1" *-- "0..*" SellerWalletTransaction
SellerWallet "1" -- "0..*" WithdrawalRequest
Transaction "1" -- "0..2" Review : đánh giá
User "1" -- "0..*" Notification : nhận

note right of User
  Buyer và Seller là vai trò
  của Business User theo ngữ cảnh.
end note

note bottom of EscrowTransaction
  Ledger prototype, không đại diện
  cho tiền thật tại ngân hàng.
end note
@enduml

